clean up issue generation and rendering

--- a/templates/delta-list.html
+++ b/templates/delta-list.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <Build BodyHeader _body_header.html />
-    <content>
+    <content class="search">
       <search>
         <form action="/search" style="width:95%">
           <input name="q" type="text" placeholder="Search" value="<Search ornull>" style="width:97%">
