--- a/templates/delta-issue.html
+++ b/templates/delta-issue.html
@@ -14,7 +14,7 @@
       <comments>
         <Build Comments _comment_thread.html />
         <form class="pretty" action="add-comment" method="POST">
-          <context><CurrentUsername /></context>
+          <context>Commenting as <CurrentUsername /></context>
           <textarea name="comment"></textarea>
           <button type="submit" name="comment">Comment</button>
           <input type="hidden" name="did" value="<Delta_id>" />
