simplfy adding comments

--- a/templates/delta-issue.html
+++ b/templates/delta-issue.html
@@ -17,7 +17,7 @@
           <context>Commenting as <CurrentUsername /></context>
           <textarea name="comment"></textarea>
           <button type="submit" name="comment">Comment</button>
-          <input type="hidden" name="did" value="<Delta_id>" />
+          <input type="hidden" name="did" value="<Delta_id />" />
         </form>
       </comments>
       <extra>
