move html into html

--- a/templates/delta-list.html
+++ b/templates/delta-list.html
@@ -20,7 +20,7 @@
               <span class="muted"><Index></span>
               <a href="<TitleUri>"><Title></a>
             </div>
-            <CommentsIcon>
+            <span><span class="icon <CommentNew default="" />"></span><CommentCount type="usize" /></span>
           </div>
           <desc class="muted"><Desc ORELSE &nbsp;></desc>
         </row>
