show username in nav auth block on issues/diffs

--- a/templates/delta-list.html
+++ b/templates/delta-list.html
@@ -22,7 +22,7 @@
             </div>
             <span><span class="icon <CommentNew default="" />"></span><CommentCount type="usize" /></span>
           </div>
-          <desc class="muted"><Desc ORELSE &nbsp;></desc>
+          <desc class="muted"><Desc default="&nbsp;"></desc>
         </row>
         </For>
       </actionable>
