simplify some syntax highlighting calls

--- a/templates/blame.html
+++ b/templates/blame.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <Build BodyHeader _body_header.html />
-    <content class="mw">
+    <content class="fw">
       <div class="blob-header">
         <h3><RepoName/></h3>
         <div class="act-btns">
