upgrade toggle html into enum

--- a/templates/commit.html
+++ b/templates/commit.html
@@ -22,8 +22,11 @@
           </data>
         </commit>
       </With>
-
-      <div style="width: 100%"><span class="toggle"><a class="<InlineActive ornull />" href="?inline=true">inline</a><a class="<SplitActive ornull />" href="?inline=false">split</a></span></div>
+      <Directive type="enum" name="InlineToggle" text="active" />
+      <div style="width: 100%"><span class="toggle">
+        <a class="<InlineToggle enum="inlined" />" href="?inline=true">inline</a>
+        <a class="<InlineToggle enum="split" />" href="?inline=false">split</a>
+      </span></div>
 
       <Build Comments _comment_thread.html />
       <diff>
