convert diff patch to use <Split
this is a partial commit, I'm planning to add line numbers to patches
and this is a needed prolog

--- a/static/main.css
+++ b/static/main.css
@@ -769,6 +769,7 @@ blob, gist, patch {
 		.split {
 			display: flex;
 			span {
+				white-space: collapse;
 				flex: auto;
 				margin: 0;
 				width: fit-content;
