--- a/templates/blame.html
+++ b/templates/blame.html
@@ -26,7 +26,7 @@
               <a href="/repo/<RepoName>/commit/<Sha>"><MSha ornull>&nbsp;</a>
               <With AuthorEmail><author class="muted"><a href="/user?user=<Email>"><Author ornull/></a></author></With>
             </span>
-            <ln num="<Num type=usize >" id="L<Num type=usize >" href="#L<Num type=usize >"><Line></ln>
+            <ln num="<Num type="usize" />" id="L<Num type="usize" />" href="#L<Num type="usize" />"><Line /></ln>
           </span></For>
         </code>
         </div>
