rename code lines component

--- a/templates/blob.html
+++ b/templates/blob.html
@@ -11,7 +11,7 @@
       </div>
       <blob>
         <header><span><Filename /></span></header>
-        <div class="codeblock"><code><For BlobLines><ln num="<Num type=usize >" id="L<Num type=usize >" href="#L<Num type=usize >"><Line /></ln>
+        <div class="codeblock"><code><For NumberedLines><ln num="<Num type=usize >" id="L<Num type=usize >" href="#L<Num type=usize >"><Line /></ln>
 </For></code>
         </div>
       </blob>
