--- a/templates/gist.html
+++ b/templates/gist.html
@@ -9,7 +9,7 @@
       <For GistFiles><gist>
         <header><span><FileName /></span></header>
 
-        <div class="codeblock"><code><For BlobLines>
+        <div class="codeblock"><code><For NumberedLines>
 <ln num="<Num type=usize >" id="L<Num type=usize >" href="#L<Num type=usize >"><Line /></ln></For></code>
         </div>
       </gist></For>
