--- a/templates/delta-diff.html
+++ b/templates/delta-diff.html
@@ -7,28 +7,26 @@
     <Build BodyHeader _body_header.html />
     <content>
       <delta class="diff">
-
+        <main>
+          <name><Title /></name>
+          <div class=muted><Status /> | Created <Created /> by <Creator ornull /> | Updated <Updated /></div>
+          <desc><Description /></desc>
+        </main>
         <With Patch>
-          <With Header>
-            <main>
-            <name><Title /></name>
-            <desc><Message></desc>
-            </main>
-          </With>
           <diff><Build Patch _patch.html /></diff>
         </With>
 
         <extra>
-        <comments>
-          <Build Comments _comment_thread.html />
-          <form class="pretty" action="add-comment" method="POST">
-            <context>Commenting as <CurrentUsername /></context>
-            <textarea name="comment"></textarea>
-            <button type="submit" name="comment">Comment</button>
-            <With PatchWarning><button type="submit" name="no-apply" class="red">Patch Does Not Apply</button></With>
-            <input type="hidden" name="did" value="<DeltaId>" />
-          </form>
-        </comments>
+          <comments>
+            <Build Comments _comment_thread.html />
+            <form class="pretty" action="add-comment" method="POST">
+              <context>Commenting as <CurrentUsername /></context>
+              <textarea name="comment"></textarea>
+              <button type="submit" name="comment">Comment</button>
+              <With PatchWarning><button type="submit" name="no-apply" class="red">Patch Does Not Apply</button></With>
+              <input type="hidden" name="did" value="<DeltaId>" />
+            </form>
+          </comments>
         </extra>
       </delta>
     </content>
