disable diff preview button

--- a/templates/diff-new.html
+++ b/templates/diff-new.html
@@ -34,7 +34,7 @@
           </div>
           <textarea name="desc" placeholder="Additional information about this patch suggestion"><Desc ornull /></textarea>
           <buttons>
-            <button name="preview">Preview (does nothing)</button>
+            <button name="preview" disabled=disabled>Preview [not implemented]</button>
             <button name="submit">Submit</button>
           </buttons>
         </form>
