fix delta html links/style

--- a/templates/delta-list.html
+++ b/templates/delta-list.html
@@ -16,8 +16,8 @@
       <For DeltaList>
         <row>
           <div class="main">
-            <a href="<UriBase /><Index />">
-              <div><span class="muted"><Index /></span> <Title /></div>
+            <a href="<UriBase />/<Index />">
+              <div><span class="muted">0x<Index /></span> <Title /></div>
               <With DeltaMeta><span class="meta muted"><Repo /> - <Flavor /></span></With>
               <desc class="muted"><Desc default="&nbsp;" /></desc>
             </a>
