enable updating diff via curl
also includes tracking comments through updates

TODO add links and way to view previous versions
TODO mute comments made after current version

--- a/templates/diff-new.html
+++ b/templates/diff-new.html
@@ -27,7 +27,7 @@
             <button name="from_paste" value="true" formaction="new">Use Paste</button>
           </With>
           <With PatchPaste>
-            <textarea name="patch_paste" placeholder="Paste Patch Here"><PatchBlob ornull /></textarea>
+            <textarea name="patch" placeholder="Paste Patch Here"><PatchBlob ornull /></textarea>
             <button name="from_uri" value="true" formaction="new">Use URL</button>
             <button name="from_network" value="true" formaction="new">Use Network</button>
           </With>
