refactor bot rules to make it easier to ban rude people

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -25,7 +25,7 @@
             <label>Block Name</label>
             <input name="block_name" value="<ConfigName default="default" />"/>
             <br>
-            <textarea name="block_text" rows="<Count type="usize" default="10" />" /><ConfigText ornull /></textarea>
+            <textarea name="block_text" rows="<Count type="usize" />" /><ConfigText ornull /></textarea>
             </div>
           </For>
         </div>
